# azure-linux-dev-tools

./: .editorconfig-checker.json  .gitattributes  .gitignore  .golangci.yml  .gremlins.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SUPPORT.md  cliff.toml  go.mod  go.sum  magefile.go  pyrightconfig.json  requirements-lint.txt  ruff.toml  zizmor.yml
.devcontainer/: Dockerfile.AZL-3.0  README.md  daemon.json  devcontainer.json  start-docker.sh
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: CopilotIssue.yml  bug_report.md  config.yml  documentation.md  feature_request.md  questions-feedback.md
.github/getgotools/: action.yml
.github/instructions/: agent-skills.instructions.md  concurrency.instructions.md  docs.instructions.md  go.instructions.md  projectconfig-fingerprint.instructions.md  testing.instructions.md
.github/workflows/: check-docs.yaml  check-pr-title.yml  check-workflows.yml  codeql.yml  coverage.yml  (+11 more)
defaultconfigs/: defaultconfigs.go
docs/: README.md
magefiles/: cgmanifest.json  magefile.go
scenario/: clismoke_test.go  component_build_test.go  component_changed_test.go  component_e2e_test.go  component_history_test.go  component_identity_test.go  component_query_test.go  component_render_test.go  custom_source_test.go  image_customize_test.go  mcp_test.go  mock_test.go  schema_test.go  setup_test.go
schemas/: azldev.schema.json
templates/: azldev_build_publish_job.yml
testproj/: .gitignore  azldev.toml
tools/: README.md
tools/git-cliff/: Cargo.toml
tools/git-cliff/src/: lib.rs
(+619 files in other folders)
